Fixed Image rescaling on mobile and tablet

--- a/resources/css/pages/municipality.scss
+++ b/resources/css/pages/municipality.scss
@@ -11,7 +11,6 @@ $page-margin: 4rem;
   .municipality-image {
     flex-basis: 100%;
     object-fit: cover;
-    max-width: 50vw;
   }
 
   .municipality-text {
@@ -161,6 +160,12 @@ $responsive-margin: $page_margin / 3;
       }
     }
   }
+}
+
+@include mixins.from(mixins.$desktop) {
+  .municipality-image {
+    max-width: 50vw;
+  } 
 }
 
 @include mixins.from(mixins.$widescreen) {
